# causal-lift

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: case-studies.md  product-brief.md
examples/: acme_case_study.py  amazon_sku_holdout.py  benchmark.py  benchmark_robyn.py  billboard_holdout.py  from_csv.py  interpreting_results.md  quickstart.py
examples/benchmark_results/: benchmark_snapshot.json  bootstrap_dist.csv  bootstrap_summary.csv  edge_cases.json  leave_one_out.csv  peer_comparison.csv  recovery_table.csv  robyn_estimates.csv  robyn_headline.json  sim_per_run.csv
playground/: README.md
playground/backend/: main.py  requirements.txt
playground/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
playground/frontend/src/: App.tsx  api.ts  types.ts  utils.ts
playground/frontend/src/components/: ChannelCard.tsx  Dashboard.tsx  RoasChart.tsx  SpendRevenueChart.tsx  Upload.tsx
src/causal_lift/: __init__.py  analyzer.py  cli.py  data.py  experiments.py  geo.py  loaders.py  mmm.py  optimiser.py  synthetic.py
tests/: test_benchmark.py  test_bootstrap.py  test_data.py  test_experiments.py  test_geo.py  test_loaders.py  test_mmm.py  test_optimiser.py  test_synthetic.py
